--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,6 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div role='main' class='container' id="root"></div>
   </body>
 </html>
